<resources>
    <string name="app_name">IQUII Test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_fav">Favorites</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_body">This is a TEST App for applying to IQUII \n  Make a search to start</string>
    <string name="click">Click here!</string>
    <string name="no_results">Sorry, no results</string>
    <string name="no_fav">Did not found anything special ? /n  Add images to favorites to see them here later</string>
    <string name="add_fav">Add to favorites</string>
    <string name="developed_by">Developed by:</string>
    <string name="name" translatable="false">José González</string>
    <string name="contact">Contact</string>
</resources>