<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:paddingVertical="20dp"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@mipmap/developed_by"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developed_by"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/name"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_linked_in"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:tint="@color/red"
                android:src="@mipmap/ic_linked_in"
                />
            <ImageView
                android:id="@+id/img_github"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:tint="@color/red"
                android:src="@mipmap/ic_github"
                />

        </LinearLayout>

        <Button
            android:id="@+id/b_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/contact"/>


    </LinearLayout>


</RelativeLayout>